--- a/content/course_weeks/week_10/week_10_oli.qmd
+++ b/content/course_weeks/week_10/week_10_oli.qmd
@@ -1,6 +1,6 @@
 ---
-title: "10 - Regression Discontinuity"
-linktitle: "10 - Regression Discontinuity"
+title: "10 - Difference-in-Differences (2/2)"
+linktitle: "10 - Difference-in-Differences (2/2)"
 output:
   blogdown::html_page:
     toc: true
