change chapter title

--- a/content/course_weeks/week_11/week_11.qmd
+++ b/content/course_weeks/week_11/week_11.qmd
@@ -1,6 +1,6 @@
 ---
-title: "11 - Synthetic Control & Regression Discontinuity"
-linktitle: "11 - Synthetic Control & Regression Discontinuity"
+title: "11 - Synthetic Control (1/2)"
+linktitle: "11 - Synthetic Control (1/2)"
 output:
   blogdown::html_page:
     toc: true
