--- a/content/course_weeks/overview.qmd
+++ b/content/course_weeks/overview.qmd
@@ -44,8 +44,8 @@ Sorry for the inconvenience. See you tomorrow!
 | 8 | June 10 & 11 | Recap | - | [{{< fa laptop >}}](week_08/week_8.html) | [{{< fa brands github >}}](https://classroom.github.com/a/1DoD8H5P) |
 | 9 | June 18 | Difference-in-Differences (1/2) | [{{< fa book-open >}}](https://tuhhstartupengineers-classroom.github.io/ss24-causal-data-science/slides/08_did.html) | [{{< fa laptop >}}](week_09/week_9.html) | [{{< fa brands github >}}](https://classroom.github.com/a/TvLAqy53) |
 | 10 | June 24 & 25 | Difference-in-Differences (2/2) | [{{< fa book-open >}}](https://tuhhstartupengineers-classroom.github.io/ss24-causal-data-science/slides/08_did.html) | [{{< fa laptop >}}](week_09/week_9.html) | [{{< fa brands github >}}](https://classroom.github.com/a/AUAr8zj4) |
-| 11 | July 1 & 2 | Synthetic Control & Regression Discontinuity  | {{< fa book-open >}} | {{< fa laptop >}} | {{< fa brands github >}} |
-| 12 | July 8 & 9 | Causal Mediation | {{< fa book-open >}} | {{< fa laptop >}} | {{< fa brands github >}} |
+| 11 | July 1 & 2 | Synthetic Control (1/2)  | [{{< fa book-open >}}](https://tuhhstartupengineers-classroom.github.io/ss24-causal-data-science/slides/09_synth_c.html) | {{< fa laptop >}} | {{< fa brands github >}} |
+| 12 | July 8 & 9 | Synthetic Control (2/2) | {{< fa book-open >}} | {{< fa laptop >}} | {{< fa brands github >}} |
 
 : {tbl-colwidths="[10, 40, 90, 10, 10, 10]"}
 
